[package]
name = "amd-epp"
version = "0.1.0"
edition = "2021"

[dependencies]
configparser = "3.1.0"
nix = { version = "0.29.0", features = ["user"] }
num_cpus = "1.16.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
